<?xml version="1.0" encoding="utf-8"?>
<!-- Actions de la toolbar de l'espace de travail (étape 15 ; v0.41.1 :
     bouton Run dédié pour fun main()). -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_run"
        android:icon="@drawable/ic_executer"
        android:title="@string/editor_run"
        android:visible="false"
        app:iconTint="@color/codeide_canal_build"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_synchroniser"
        android:icon="@drawable/ic_synchroniser"
        android:title="@string/editor_synchroniser"
        app:iconTint="?attr/colorOnSurfaceVariant"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_executer"
        android:icon="@drawable/ic_executer"
        android:title="@string/editor_executer"
        app:iconTint="?attr/colorOnSurfaceVariant"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_enregistrer"
        android:icon="@drawable/ic_enregistrer"
        android:title="@string/editor_enregistrer"
        app:iconTint="?attr/colorOnSurfaceVariant"
        app:showAsAction="ifRoom" />

    <!-- Fermeture de l'espace de travail (étape 31) : l'action vivait
         dans l'entête v1 du tiroir, elle rejoint le débordement de la
         toolbar depuis l'architecture à fragments. -->
    <item
        android:id="@+id/action_fermer_projet"
        android:title="@string/editor_tiroir_fermer_projet"
        app:showAsAction="never" />
</menu>
